libcolumnfile.pc.in: Remove reference to "RenderProto"
This file was based on a file from a different package, and I forgot to
remove all occurrences of the old package name.

--- a/libcolumnfile.pc.in
+++ b/libcolumnfile.pc.in
@@ -3,8 +3,8 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
  
-Name: RenderProto
-Description: libcolumnfile library
+Name: libcolumnfile
+Description: column file library
 Version: @VERSION@
 Cflags: -I${includedir}
 Libs: -L${libdir} -lcolumnfile
