Makefile.am: Add CAPNP_CFLAGS to AM_CPPFLAGS

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,6 +11,7 @@ TESTS = $(check_PROGRAMS)
 ACLOCAL_AMFLAGS = -I m4
 
 AM_CPPFLAGS = \
+  $(CAPNP_CFLAGS) \
   $(LIBLZ4_CFLAGS) \
   $(LIBLZMA_CFLAGS) \
   $(ZLIB_CFLAGS)
