--- a/Makefile.am
+++ b/Makefile.am
@@ -33,7 +33,18 @@ libcolumnfile_la_LIBADD = \
   $(LIBLZMA_LIBS) \
   $(ZLIB_LIBS) \
   -lsnappy
-libcolumnfile_la_LDFLAGS = -no-undefined -version-info 0:0:0
+
+# version-info: current:revision:age
+#
+#   1. If the library source code has changed at all since the last update,
+#      then increment revision (‘c:r:a’ becomes ‘c:r+1:a’).
+#   2. If any interfaces have been added, removed, or changed since the last
+#      update, increment current, and set revision to 0.
+#   3. If any interfaces have been added since the last public release, then
+#      increment age.
+#   4. If any interfaces have been removed or changed since the last public
+#      release, then set age to 0.
+libcolumnfile_la_LDFLAGS = -no-undefined -version-info 1:0:0 -release 1.2.0
 
 src_columnfile_test_SOURCES = \
   src/columnfile_test.cc 
